--- a/.github/workflows/AutoBuild-d-team_newifi-d2-Clash.yml
+++ b/.github/workflows/AutoBuild-d-team_newifi-d2-Clash.yml
@@ -26,8 +26,8 @@ on:
   #  branches: 
   #    - master
 
-  #schedule:
-  #  - cron: 0 8 * * 5
+  schedule:
+    - cron: 0 5 1,15,25 * *
 
   #watch:
   #  types: [started]
