--- a/.github/workflows/AutoBuild-d-team_newifi-d2.yml
+++ b/.github/workflows/AutoBuild-d-team_newifi-d2.yml
@@ -137,12 +137,13 @@ jobs:
         cd openwrt
         ./scripts/feeds update -a
         ./scripts/feeds install -a
+        curl -o ./feeds/packages/multimedia/aliyundrive-webdav/Makefile https://raw.githubusercontent.com/coolsnowwolf/packages/aea60b5432fad984c0a4013bad0f0c5e00dcd115/multimedia/aliyundrive-webdav/Makefile
 
     - name: Accelerate
       if: env.CACHE_ACCELERATE == 'true'
       uses: klever1988/cachewrtbuild@main
       with:
-        ccache: false
+        ccache: true
         toolchain: true
         skip: true
         clean: true
