--- a/.github/workflows/AutoBuild-d-team_newifi-d2-rustupdate.yml
+++ b/.github/workflows/AutoBuild-d-team_newifi-d2-rustupdate.yml
@@ -120,6 +120,8 @@ jobs:
         sudo -E apt-get update
         sudo -E apt-get -y install busybox build-essential cmake asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib g++-multilib p7zip p7zip-full msmtp libssl-dev texinfo libreadline-dev libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint ccache curl wget vim nano python2.7 python3 python3-pip python3-ply haveged lrzsz device-tree-compiler scons antlr3 gperf intltool mkisofs rsync
         sudo timedatectl set-timezone "Asia/Shanghai"
+        sudo rustup self update
+        sudo rustup update
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
         if [ "${{ env.DELETE_USELESS_FILES }}" == true ]
