--- a/.github/workflows/AutoBuild-d-team_newifi-d2-Clash.yml
+++ b/.github/workflows/AutoBuild-d-team_newifi-d2-Clash.yml
@@ -22,9 +22,9 @@ on:
         default: 'Clash'
 ### 控制部分结束 ( 以上内容请保持不变 )
 
-  push:
-    branches: 
-      - master
+  #push:
+    #branches: 
+      #- master
 
   schedule:
     - cron: 0 5 1,15,25 * *
