--- a/.github/workflows/AutoBuild-d-team_newifi-d2-Lite.yml
+++ b/.github/workflows/AutoBuild-d-team_newifi-d2-Lite.yml
@@ -12,17 +12,17 @@ on:
   #  branches: 
   #    - master
 
-  #schedule:
-  #  - cron: 0 8 * * 5
+  schedule:
+    - cron: 0 5 1,15,25 * *
 
-  #watch:
-  #  types: [started]
+  watch:
+    types: [Lite]
 
   workflow_dispatch:
     inputs:
       Tempoary_CONFIG:
         description: '配置文件'
-        default: 'd-team_newifi-d2'
+        default: 'd-team_newifi-d2-Lite'
         type: choice
         options:
           - 'd-team_newifi-d2'
@@ -30,7 +30,7 @@ on:
           - 'd-team_newifi-d2-Lite'
       Tempoary_FLAG:
         description: '固件标签'
-        default: 'AUTO'
+        default: 'Lite'
         type: choice
         options:
           - 'AUTO'
@@ -39,7 +39,7 @@ on:
           - 'Lite'
       Tempoary_IP:
         description: '固件 IP 地址 [可选]'
-        default: ''
+        default: '192.168.1.1'
       UPLOAD_RELEASES:
         description: '上传固件到 Releases'
         default: 'true'
@@ -56,7 +56,7 @@ on:
 ### 环境变量设置
 env:
 # 编译时调用的 [.config] 文件名称
-  CONFIG_FILE: d-team_newifi-d2
+  CONFIG_FILE: d-team_newifi-d2-Lite
 # 源码仓库:分支
   DEFAULT_SOURCE: coolsnowwolf/lede:master
 # 删除无用文件以增加编译空间
@@ -65,6 +65,12 @@ env:
   DELETE_OLD_WORKFLOW: false
 # Cache 加速编译
   CACHE_ACCELERATE: false
+# 上传固件到 Github Releases
+  UPLOAD_RELEASES: true
+# 上传固件到 Github Artifacts
+  UPLOAD_ARTIFACTS: false
+# 上传 bin 文件夹到 Github Artifacts
+  UPLOAD_BIN_ARTIFACTS: false
 ### 结束
 
 jobs:
